--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
 :root {
+  --main-color: #001449;
+  --secondary-color: #012677;
+  --terciary-color: #005bc5;
+  --sea-blue-color: #00b4fc;
+  --ligth-blue-color: #17f9ff;
+
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -29,6 +36,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  
 }
 
 h1 {
